--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "开发思路：[大型企业应用在前端微应用视角下的思考](https://github.com/iuap-design/blog/issues/306)",
   "main": "index.js",
   "scripts": {
-    "start": " node updateRef.js && ucf-scripts start --homepage=mdfrefer-demo",
+    "start": "node updateRef.js && ucf-scripts start --homepage=mdfrefer-demo",
     "build": "node updateRef.js && ucf-scripts build"
   },
   "repository": {
@@ -20,7 +20,8 @@
   "devDependencies": {
     "ac-drawer": "0.0.2",
     "copy-webpack-plugin": "^5.0.3",
-    "ucf-scripts": "1.2.2"
+    "ucf-scripts": "1.2.2",
+    "ucf-cli": "1.3.1"
   },
   "dependencies": {
     "@yonyou/mdf-refer": "0.0.4-beta.1",
